<resources>
    <string name="app_name">Dispatch</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">86CYYjcpVIwhy3zsBIOLstoBbEh17cRehqLbYwoP</string>
    <string name="back4app_client_key">l3oiItldSDSLSvE20qLOH2RfqLPBkT2P6eLaUlo1</string>
    <string name="ExpressMenuItem">Express</string>
    <string name="RegularMenuItem">Regular</string>
    <string name="BatchMenuItem">Batch</string>
    <string name="currentlocation">USE MY CURRENT LOCATION</string>
    <string name="manuallocation">MANUALLY SET PICK UP POINT</string>
    <string name="setLocationTitleExpress">SET PICK UP LOCATION FOR EXPRESS DELIVERY</string>
    <string name="setLocationTitleRegular">SET PICK UP LOCATION FOR REGULAR DELIVERY</string>
    <string name="setLocationTitleBatch">SET GENERAL LOCATION FOR BATCH DELIVERY</string>
    <string name="LogoAltText">DISPATCH</string>
    <string name="UserLoginText">LOGIN AS A USER</string>
    <string name="DriverLoginText">LOGIN AS A DRIVER</string>
    <string name="title_activity_express_maps">Map</string>
    <string name="title_activity_user_maps">Map</string>
    <string name="confirmButton">CONFIRM YOUR LOCATION</string>
    <string name="PackageDesc">Package Description</string>
    <string name="RecipientPhone">RECIPIENTS PHONE</string>
    <string name="RecipientName">RECIPIENTS NAME</string>
    <string name="PackageDestination">Enter Destination</string>
    <string name="VehicleType">Select a type of Vehicle</string>
    <string name="OrderButton">ORDER</string>
    <string name="title_activity_express_destination_map">Map</string>
    <string name="Confirm_Destination">Confirm Destination</string>
    <string name="search_hint">Search Destination</string>
    <string name="Full_name">Enter your full name</string>
    <string name="user_name">Enter your UserName</string>
    <string name="email">Enter a valid email address</string>
    <string name="password">Enter a password</string>
    <string name="phone">Enter your phone number</string>
    <string name="confirm_password">Confirm password</string>
    <string name="TermsNConditionsLink">Terms and Conditions</string>
    <string name="TermsNConditionsLabel">I Agree to Terms and condition</string>
    <string name="SignHeader">Sign Up</string>
    <string name="SignUpBtn">Sign Up</string>
    <string name="LoginFooterRedirect">Already have an account? Login here</string>
    <string name="SignUpFooterRedirect">Dont have an account? SignUp here</string>
    <string name="LoginBtn">Login</string>
    <string name="LoginHeader">LOGIN</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="liscenseLabel">Do you have a Drivers Licence</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="genderLabel">Which sex are you?</string>
    <string name="licenseId">Enter your Licence ID number</string>
    <string name="VehicleModule">Enter your vehicle module</string>
    <string name="VehicleLicenceNumber">Enter your vehicle Licence plate number</string>
    <string name="UserSignUpRedirect">Sign up as a user here!</string>
    <string name="DriversignupRedirect1">Need a drivers account? sign up here</string>
    <string name="DriverSigupToolbarHeader">Driver Sign up</string>
    <string name="Driver_LoginHeader">DRIVERS LOGIN</string>
    <string name="navigation_draw_open">Open navigation drawer </string>
    <string name="navigation_draw_close">Close navigation drawer </string>
    <string name="book_button">BOOK</string>
    <string name="bicycle">Bicycle</string>
    <string name="bicycle_description">Bicycle Description</string>
    <string name="select_vehicle">Select Vehicle</string>
    <string name="RegularDescription">Regular Dispatch allows you to book a driver nearest to you for a pick up in at least an hours time,select a vehicle below to begin</string>
    <string name="package_details">Package Details</string>
    <string name="regular_dispatchTitle">Regular Dispatch</string>
    <string name="ExpressDescription">Express allows you to order a driver nearest to you for a pick up ,select a vehicle below to begin</string>
    <string name="express_dispatch">Express Dispatch</string>
    <string name="set_date_and_time">Set Date and Time</string>
    <string name="display_username">username</string>
    <string name="accept_button">ACCEPT</string>
    <string name="users_address">users address</string>
    <string name="package_destination_address_placehlder">Destination Address</string>
    <string name="destination_label">Destination:</string>
    <string name="more_information">More information</string>
    <string name="batch_dispatch">Batch Dispatch</string>
    <string name="courier_name">Courier Name</string>
    <string name="cancel">Cancel</string>
    <string name="driverName">DriverName</string>
    <string name="recipient_label">Recipient:</string>
    <string name="phone_label">Phone:</string>
    <string name="phoneNumberPlaceHolder">###-####-###</string>
    <string name="call_driver">Call Driver</string>
    <string name="track_package">Track</string>
    <string name="vehicle_label">Vehicle</string>
    <string name="vehicle_type_Placeholder">Vehicle Type</string>
    <string name="available_drivers">Available Drivers:</string>
    <string name="bargain_button">BARGAIN</string>
    <string name="enter_price">Enter Price</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="send">send</string>
    <string name="end">End</string>
    <string name="ghs_placeholder">GHS###</string>


</resources>