<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExpressDelivery.ExpressAuctionActivity">

    <ImageView
        android:id="@+id/packageImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/ic_imagholder_foreground" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/packageImage">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/packageDescriptionTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PackageDesc"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/recipientNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RecipientName"
        android:layout_below="@+id/packageDescriptionTv"
        android:textSize="25sp"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/recipientPhoneTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RecipientPhone"
        android:layout_below="@+id/recipientNameTV"
        android:textSize="25sp"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/PackageDestinationTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PackageDestination"
        android:layout_below="@+id/recipientPhoneTV"
        android:textSize="25sp"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/vehicleTypeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/VehicleType"
        android:layout_below="@+id/PackageDestinationTV"
        android:textSize="25sp"
        android:layout_marginTop="5dp" />

</RelativeLayout>




    </ScrollView>



</RelativeLayout>