<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@drawable/white_gray_border_bottom">


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Amount"
            android:inputType="numberDecimal"
            android:hint="@string/enter_price"
            android:textSize="40sp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/Comment"
            android:inputType="textMultiLine"
            android:hint="@string/add_a_comment"
            android:layout_below="@+id/Amount"
            android:textSize="30sp"/>

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/Comment"
    android:layout_alignParentEnd="true"
    >

    <Button
        android:id="@+id/expressAuctionEndBtn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginRight="25dp"
        android:text="@string/end"
        app:backgroundTint="#EC1010" />

    <Button
        android:id="@+id/expressAuctionAcceptBtn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_toEndOf="@+id/expressAuctionEndBtn"
        android:text="@string/send"

        app:backgroundTint="#9C27B0" />

</RelativeLayout>




    </RelativeLayout>

</RelativeLayout>